--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=EC21 GSM Library
-version=1.0.0
+version=1.0.1
 author=Darshan Mirajkar
 maintainer=Darshan Mirajkar <darshan.mirajkar@optipace.in>
-sentence=HTTP liberary for EC21
+sentence=HTTP liberary for Quectel EC21
 paragraph=Supports the ESP32
 category=Sensors
-url=https://bitbucket.org/lhq/ec21_gsm_library
+url=https://github.com/darshanmirajkar/Quectel_EC21
 architectures=*
